# docstub

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  LICENSE.txt  README.md  REMINDERS.md  pyproject.toml  stubtest_allow.txt  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: assert-unchanged.sh
.github/workflows/: cd.yml  ci.yml
doc/: command_line.md  command_line_reference.md  index.md  typing.md  typing_reference.md  typing_syntax.md  user_guide.md
doc/source/: index.rst
docs/: command_line.md  conf.py  configuration.md  glossary.md  index.md  installation.md  introduction.md  typing_syntax.md  user_guide.md
docs/development/: contributing.md  design.md  index.md  release.md
docs/release_notes/: index.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md
docs/static/: furo_overrides.css
docs/templates/: ethical-ads.html  external-links.html  version.html
docs/templates/sidebar/: external-links.html
example/: docstub.toml
example/example_pkg/: __init__.py  _basic.py  _compiled.pyi  _numpy.py
example/example_pkg-stubs/: __init__.pyi  _basic.pyi  _compiled.pyi  _numpy.pyi
examples/: docstub.toml
examples/example_pkg/: __init__.py  _basic.py  _numpy.py
examples/example_pkg-stubs/: __init__.pyi  _basic.pyi  _numpy.pyi
src/docstub/: __init__.py  __main__.py  _analysis.py  _analysis.pyi  _app_generate_stubs.py  _cache.py  _cli.py  _cli.pyi  _cli_help.py  _concurrency.py  _config.py  _config.pyi  _docstrings.py  _doctype.py  _path_utils.py  _path_utils.pyi  _report.py  _report.pyi  _static_analysis.py  _stdlib_types.py  _stubs.py  _utils.py  _version.pyi  config_template.toml  default_config.toml  docstring_types.lark  doctype.lark  numpy_config.toml
src/docstub-stubs/: __init__.pyi  __main__.pyi  _analysis.pyi  _app_generate_stubs.pyi  _cache.pyi  _cli.pyi  _cli_help.pyi  _concurrency.pyi  _config.pyi  _docstrings.pyi  _doctype.pyi  _path_utils.pyi  _report.pyi  _stubs.pyi  _utils.pyi
src/docstub-stubs/_vendored/: __init__.pyi  stdlib.pyi
src/docstub/_vendored/: glob.py  stdlib.py  stdlib.pyi
tests/: __init__.py  conftest.py  test_analysis.py  test_cache.py  test_cli.py  test_cli_help.py  test_concurrency.py  test_config.py  test_dev.py  test_doc.py  test_docs.py  test_docstrings.py  test_doctype.py  test_path_utils.py  test_report.py  test_stubs.py  test_utils.py
tools/: collect_stdlib_types.py
