[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "docstub"
authors = [
  {name = "Lars Grüter"},
]
description = "Generate Python stub files (PYI) from docstrings"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "numpydoc >=1.7.0",
  "click >=8.1.7",
  "libcst >=1.3.1",
  "lark >=1.1.9",
]

[project.optional-dependencies]
optional = [
  "black >=24.4.2",
  "isort >=5.13.2",
]
dev = [
  "pre-commit >=3.7",
  "ipython",
]
test = [
  "pytest >=5.0.0",
  "coverage >=7.5.0",
]

[project.urls]
Home = "https://github.com/lagru/docstub"

[project.scripts]
docstub = "docstub.__main__:main"


[tool.setuptools_scm]
write_to = "src/docstub/_version.py"


[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "C4",       # flake8-comprehensions
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "RET504",   # Assignment before `return` statement facilitates debugging
  "PTH123",   # Using builtin open() instead of Path.open() is fine
]


[tool.docstub.docnames]
cst = {import = "libcst", as="cst"}
lark = {import = "lark"}
